--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,6 +1,6 @@
 @inproceedings{uchoa2021do,
   title={Do Critical Components Smell Bad? An Empirical Study with Component-based Software Product Lines},
-  author={Anderson Uchôa and Wesley K.G. Assunçao and Alessandro Garcia},
+  author={Anderson Uchôa and Wesley K.G. Assunção and Alessandro Garcia},
   booktitle={Proceedings of the 15th Brazilian Symposium on Software Components, Architectures, and Reuse (SBCARS), 2021, Joinville, Brazil, September 27 to October 1},
   pages={1--10},
   note={<font color="red">To appear!</font>},
