add publication sbsi 22

--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,14 @@
+@inproceedings{souza2022tel,
+  title={TEl-IoT: A Template for Eliciting IoT Software System Requirements},
+  author={Sabrina R. de Souza and Bruno P. de Souza and Anderson Uchôa and Daniella de O. Costa},
+  booktitle={Proceedings of the XVIII Brazilian Symposium on Information Systems (SBSI), 2022, Curitiba, Brazil, May 16--19},
+  pages={1--8},
+  year={2022},
+  abstract={Context: The Internet of Things (IoT) is a network of physical objects and system connected through mutual communication protocols. IoT systems have specific characteristics such as, self-configuration, dynamic changes, device and software heterogeneity. Goal: As IoT systems incorporate several components of the software, hardware, communication, and other features, building requirements documents to such systems become a challenge for Requirements Engineering (RE). Thus, this paper presents TEl-IoT, a template to aid developers during the requirements elicitation activities for IoT systems. Method: We conducted three evidence-based studies. We first performed a literature review aiming to identify artifacts that support requirements elicitation and specification for IoT systems. Second, based on the literature review, we proposed the initial version of the TEl-IoT. Finally, we performed two empirical studies to assess the TEl-IoT: (i) feasibility study with industry regarding the first version of TEl-IoT, and (ii) an observational study to understand how students apply the TEl-IoT in an IoT project. Results: Our results showed that TEl-IoT is viable, and its use reduces the time spent on requirements elicitation, in comparison with the ad-hoc way. In addition, our qualitative results also suggested that the use of TEl-IoT facilitates the requirements elicitation for IoT systems. Conclusion: We expect our template to guide requirements elicitation for IoT systems in practice. Our results showed that TEl-IoT can support developers and contribute to the body of knowledge about RE applicable in the IoT context.
+},
+  url={https://anderson-uchoa.github.io/publications/souza2022tel.pdf}
+}
+
 @inproceedings{coutinho2022on,
   title={On the Influential Interactive Factors on Degrees of Design Decay: A Multi-Project Study},
   author={Daniel Coutinho and Anderson Uchôa and Caio Barbosa and Vinícius Soares and Alessandro Garcia and Marcelo Schots and Juliana Alves Pereira and Wesley K. G. Assunção},
