--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,12 +1,22 @@
+@inproceedings{pinheiro2022how,
+  title={How do Trivial Refactorings Affect Classification Prediction Models?},
+  author={Darwin Pinheiro and Carla Bezerra and Anderson Uchôa},
+  booktitle={Proceedings of the 16th Brazilian Symposium on Software Components, Architectures, and Reuse (SBCARS), 2022, Uberlandia, Brazil, October 3--4},
+  pages={1--10},
+  year={2022},
+  abstract={Refactoring is defined as a transformation that changes the internal structure of the source code without changing the external behavior. Keeping the external behavior means that after applying the refactoring activity, the software must produce the same output as before the activity. The refactoring activity can bring several benefits, such as: removing code with low structural quality, avoiding or reducing technical debt, improving code maintainability, reuse or readability. In this way, the benefits extend to internal and external quality attributes. The literature on software refactoring suggests carrying out studies that invest in improving automated solutions for detecting and correcting refactoring. Furthermore, few studies investigate the influence that a less complex type of refactoring can have on predicting more complex refactorings. This paper investigates how less complex (trivial) refactorings affect the prediction of more complex (non-trivial) refactorings. To do this, we classify refactorings based on their triviality, extract metrics from the code, contextualize the data and train machine learning algorithms to investigate the effect caused. Our results suggest that: (i) machine learning with tree-based models (Random Forest and Decision Tree) performed very well when trained with code metrics to detect refactorings; (ii) separating trivial from non-trivial refactorings into different classes resulted in a more efficient model, indicative of improving the accuracy of automated solutions based on machine learning; and, (iii) using balancing techniques that increase or decrease samples randomly is not the best strategy to improve datasets composed of code metrics.},
+  url={https://anderson-uchoa.github.io/publications/pinheiro2022how.pdf}
+}
+
 @inproceedings{souza2022tel,
   title={TEl-IoT: A Template for Eliciting IoT Software System Requirements},
   author={Sabrina R. de Souza and Bruno P. de Souza and Anderson Uchôa and Daniella de O. Costa},
   booktitle={Proceedings of the XVIII Brazilian Symposium on Information Systems (SBSI), 2022, Curitiba, Brazil, May 16--19},
   pages={1--8},
   year={2022},
-  abstract={Context: The Internet of Things (IoT) is a network of physical objects and system connected through mutual communication protocols. IoT systems have specific characteristics such as, self-configuration, dynamic changes, device and software heterogeneity. Goal: As IoT systems incorporate several components of the software, hardware, communication, and other features, building requirements documents to such systems become a challenge for Requirements Engineering (RE). Thus, this paper presents TEl-IoT, a template to aid developers during the requirements elicitation activities for IoT systems. Method: We conducted three evidence-based studies. We first performed a literature review aiming to identify artifacts that support requirements elicitation and specification for IoT systems. Second, based on the literature review, we proposed the initial version of the TEl-IoT. Finally, we performed two empirical studies to assess the TEl-IoT: (i) feasibility study with industry regarding the first version of TEl-IoT, and (ii) an observational study to understand how students apply the TEl-IoT in an IoT project. Results: Our results showed that TEl-IoT is viable, and its use reduces the time spent on requirements elicitation, in comparison with the ad-hoc way. In addition, our qualitative results also suggested that the use of TEl-IoT facilitates the requirements elicitation for IoT systems. Conclusion: We expect our template to guide requirements elicitation for IoT systems in practice. Our results showed that TEl-IoT can support developers and contribute to the body of knowledge about RE applicable in the IoT context.
-},
-  url={https://anderson-uchoa.github.io/publications/souza2022tel.pdf}
+  abstract={Context: The Internet of Things (IoT) is a network of physical objects and system connected through mutual communication protocols. IoT systems have specific characteristics such as, self-configuration, dynamic changes, device and software heterogeneity. Goal: As IoT systems incorporate several components of the software, hardware, communication, and other features, building requirements documents to such systems become a challenge for Requirements Engineering (RE). Thus, this paper presents TEl-IoT, a template to aid developers during the requirements elicitation activities for IoT systems. Method: We conducted three evidence-based studies. We first performed a literature review aiming to identify artifacts that support requirements elicitation and specification for IoT systems. Second, based on the literature review, we proposed the initial version of the TEl-IoT. Finally, we performed two empirical studies to assess the TEl-IoT: (i) feasibility study with industry regarding the first version of TEl-IoT, and (ii) an observational study to understand how students apply the TEl-IoT in an IoT project. Results: Our results showed that TEl-IoT is viable, and its use reduces the time spent on requirements elicitation, in comparison with the ad-hoc way. In addition, our qualitative results also suggested that the use of TEl-IoT facilitates the requirements elicitation for IoT systems. Conclusion: We expect our template to guide requirements elicitation for IoT systems in practice. Our results showed that TEl-IoT can support developers and contribute to the body of knowledge about RE applicable in the IoT context.},
+  url={https://anderson-uchoa.github.io/publications/souza2022tel.pdf},
+  doi = {10.1145/3535511.3535538}
 }
 
 @inproceedings{coutinho2022on,
@@ -15,9 +25,9 @@
   booktitle={Proceedings of the 29th IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER), 2022, Honolulu, Hawaii, March 15--18},
   pages={1--12},
   year={2022},
-  abstract={Developers constantly perform code changes throughout the lifetime of a project. These changes may induce the introduction of design problems (design decay) over time, which may be reduced or accelerated by interacting with different factors (e.g., refactorings) that underlie each change. However, existing studies lack evidence about how these factors interact and influence design decay. Thus, this paper reports a study aimed at investigating whether and how (associations of) process and developer factors influence design decay. We studied seven software systems, containing an average of 45K commits in more than six years of project history. Design decay was characterized in terms of five internal quality attributes: cohesion, coupling, complexity, inheritance, and size. We observed and characterized 12 (sub-)factors and how they associate with design decay. To this end, we employed association rule mining. Moreover, we also differentiate between the associations found on modules with varying levels of decay. Process-and developer-related factors played a key role in discriminating these different levels of design decay. Then, we focused on analyzing the effects of potentially interacting factors regarding slightly-and largely-decayed modules. Finally, we observed diverging decay patterns in these modules. For example, individually, the developer-related sub-factor that represented first-time contributors, as well as the process-related one that represented the size of a change did not have negative effects on the changed classes. However, when analyzing specific factor interactions, we saw that changes in which both of these factors interacted tended to have a negative effect on the code, leading to decay.
-},
-  url={https://anderson-uchoa.github.io/publications/coutinho2022on.pdf}
+  abstract={Developers constantly perform code changes throughout the lifetime of a project. These changes may induce the introduction of design problems (design decay) over time, which may be reduced or accelerated by interacting with different factors (e.g., refactorings) that underlie each change. However, existing studies lack evidence about how these factors interact and influence design decay. Thus, this paper reports a study aimed at investigating whether and how (associations of) process and developer factors influence design decay. We studied seven software systems, containing an average of 45K commits in more than six years of project history. Design decay was characterized in terms of five internal quality attributes: cohesion, coupling, complexity, inheritance, and size. We observed and characterized 12 (sub-)factors and how they associate with design decay. To this end, we employed association rule mining. Moreover, we also differentiate between the associations found on modules with varying levels of decay. Process-and developer-related factors played a key role in discriminating these different levels of design decay. Then, we focused on analyzing the effects of potentially interacting factors regarding slightly-and largely-decayed modules. Finally, we observed diverging decay patterns in these modules. For example, individually, the developer-related sub-factor that represented first-time contributors, as well as the process-related one that represented the size of a change did not have negative effects on the changed classes. However, when analyzing specific factor interactions, we saw that changes in which both of these factors interacted tended to have a negative effect on the code, leading to decay.},
+  url={https://anderson-uchoa.github.io/publications/coutinho2022on.pdf},
+  doi = {10.1109/SANER53432.2022.00093}
 }
 
 @inproceedings{uchoa2021do,
@@ -28,7 +38,8 @@
   note={<font color="red"> Distinguished Paper Award -- 2nd Place </font>},
   year={2021},
   abstract={Component-based software product line (SPL) consists of a set of software products that share common components. For a proper SPL product composition, each component has to follow three principles: encapsulating a single feature, restricting data access, and be replaceable. However, it is known that developers usually introduce anomalous structures, i.e., code smells, along the implementation of components. These code smells might violate one or more component principles and hinder the SPL product composition. Thus, developers should identify code smells in component-based SPLs, especially those affecting highly interconnected components, which are called critical components. Nevertheless, there is limited evidence of how smelly these critical components tend to be in component-based SPLs. To address this limitation, this paper presents a survey with developers of three SPLs. We inquire these developers about their perceptions of a critical component. Then, we characterize critical components per SPL, and identify nine recurring types of code smells. Finally, we quantitatively assess the smelliness of the critical components. Our results suggest that: (i) critical components are ten times more prone to have code smells than non-critical ones; (ii) the most frequent code smell types affecting critical components violate several component principles together; and (iii) these smell types affect multiple SPL components.},
-  url={https://anderson-uchoa.github.io/publications/uchoa2021do.pdf}
+  url={https://anderson-uchoa.github.io/publications/uchoa2021do.pdf},
+  doi = {10.1145/3483899.3483907}
 }
 
 @inproceedings{martins2021how,
@@ -38,7 +49,8 @@
   pages={1--10},
   year={2021},
   abstract={Code smells are poor code structures that might harm the software quality and evolution. However, previous studies has shown that only individual occurrences of smells may not be enough to assess the real impact that these smells can bring on systems. In this context, the co-occurrences of code smells, i.e., occurrences of more than one code smell in the same class or same method, can be better indicators of design problems for software quality. Despite its importance as an indicator of design problems, we have little known about the impact of removing the co-occurrence of smells via software refactoring on internal quality attributes, such as coupling, cohesion, complexity, and inheritance. It is even less clear on what is the developers' perspective on the co-occurrences removal. We aim at addressing this gap through a qualitative study with 14 developers. To this end, we analyze the refactorings employed by developers during the removal of 60 code smells co-occurrences, during 3 months in 5 closed-source projects. We observe (i) impact of code smells co-occurrences on internal quality attributes, (ii) which are the most harmful co-occurrences from the developers’ perspective, (iii) developers' perceptions during the removal of code smells co-occurrence via refactoring activities; and (iv) what are the main difficulties faced by developers during the removal of code smells co-occurrences in practice. Our findings indicate that: (i) the refactoring of some types of code smells co-occurrences (e.g., Dispersed Coupling--God Class) indicated improvement for the quality attributes; (ii) refactoring code smells co-occurrences according to the developers is difficult mainly due to the understanding of the code and complexity refactoring methods; and (iii) developers still have insecurities regarding the identification and refactoring of code smells and their co-occurrences.},
-  url={https://anderson-uchoa.github.io/publications/julio2021how.pdf}
+  url={https://anderson-uchoa.github.io/publications/julio2021how.pdf},
+  doi = {10.1145/3474624.3474642}
 }
 
 @inproceedings{uchoa2021unveiling,
