--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -7,7 +7,7 @@
   number = {01},
   issn = {1937-4194},
   pages = {2-10},
-  abstract = {Identifying code smells is a widely disseminated practice for preventing software systems from design problems and other maintainability issues. This task remains challenging and manual despite several catalogues and detection tools being available. The complexity involved in identifying a code smell requires the developer&amp;#x2019;s ability to analyse its surrounding context, reflecting on its actual incidence and need for removal. Despite the predominantly manual nature of the task, there is still quite limited knowledge of the human and social aspects involved. In this sense, we conducted several investigations centred on the community of software developers in recent years. The outcomes of this work provide a comprehensive view of the task and emerging findings, such as the developers&amp;#x2019; major beliefs, values, and ideas about identifying code smells. Based on these outcomes, we present practical recommendations to developers to optimise efforts in identifying code smells.},
+  abstract = {Identifying code smells is a widely disseminated practice for preventing software systems from design problems and other maintainability issues. This task remains challenging and manual despite several catalogues and detection tools being available. The complexity involved in identifying a code smell requires the developer’s ability to analyse its surrounding context, reflecting on its actual incidence and need for removal. Despite the predominantly manual nature of the task, there is still quite limited knowledge of the human and social aspects involved. In this sense, we conducted several investigations centred on the community of software developers in recent years. The outcomes of this work provide a comprehensive view of the task and emerging findings, such as the developers’ major beliefs, values, and ideas about identifying code smells. Based on these outcomes, we present practical recommendations to developers to optimise efforts in identifying code smells.},
   keywords = {codes;software;task analysis;software systems;frequency measurement;psychology;complexity theory},
   doi = {10.1109/MS.2022.3203716},
   publisher = {IEEE Computer Society},
