--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,5 +1,5 @@
 @article{9904005,
-  author = {R. de Mello and R. Oliveira and A. Uchoa and W. Oizumi and A. Garcia and B. Fonseca and F. de Mello},
+  author = {R. de Mello and R. Oliveira and A. Uchôa and W. Oizumi and A. Garcia and B. Fonseca and F. de Mello},
   journal = {IEEE Software},
   title = {Recommendations for Developers Identifying Code Smells},
   year = {2022},
