--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -1,3 +1,31 @@
+@article{BIBIANO2023107134,
+  title = {Composite refactoring: Representations, characteristics and effects on software projects},
+  journal = {Information and Software Technology},
+  volume = {156},
+  pages = {107134},
+  year = {2023},
+  issn = {0950-5849},
+  doi = {https://doi.org/10.1016/j.infsof.2022.107134},
+  url = {https://www.sciencedirect.com/science/article/pii/S0950584922002439},
+  author = {Ana Carla Bibiano and Anderson Uchôa and Wesley K.G. Assunção and Daniel Tenório and Thelma E. Colanzi and Silvia Regina Vergilio and Alessandro Garcia},
+  keywords = {Code refactoring, Composite refactoring, Software maintenance, Software project, Systematic mapping},
+  abstract = {Context: code refactoring is a code transformation that aims to improve software quality. A composite refactoring (or, simply, composite) is defined by two or more interrelated refactorings, which is often applied by developers. Each composite needs to be somehow represented and has its own characteristics (e.g., code scope) as well as its effects on software quality. However, these basic elements of composites are rarely studied systematically. The lack of systematic knowledge also misguides the design of automated support tools for supporting composite refactoring. Thus, researchers might have controversial views about basic elements of composite refactorings. An example of these literature conflicts concerns the effect of composites: while some studies suggest composites more often remove code smells, other studies indicate composites often introduce code smells. Objective: in this sense, our study aims at analyzing the technical literature of composite refactoring and building a conceptual framework of the representation models, characteristics, and the effect of composite refactoring. Method: we conducted a systematic mapping with 140 primary empirical studies about refactoring. Our systematic mapping summarizes the current knowledge on composites and also presents a conceptual framework intended to characterize composite refactoring. Results: our conceptual framework presents seven representation models, nine characteristics, and thirteen effects of composites. We found out that studies used multidimensional representations, like graphs, to determine what refactoring(s) may be suggested and combined. On composite characteristics, studies mentioned developers often finish a composite in up to a month. However, these studies do not detail why and when composites span for several weeks. Then, we discussed other existing gaps on the current literature of composites. For instance, while most of the studies report the effect of composites on internal software quality, e.g., code smells, their effect on external software quality is little explored. Conclusion: our results can motivate future studies to more deeply investigate composite refactoring applications, and the improvement of tooling support for composite refactorings.}
+}
+
+@article{ALMEIDA2023107142,
+  title = {Negative effects of gamification in education software: Systematic mapping and practitioner perceptions},
+  journal = {Information and Software Technology},
+  volume = {156},
+  pages = {107142},
+  year = {2023},
+  issn = {0950-5849},
+  doi = {https://doi.org/10.1016/j.infsof.2022.107142},
+  url = {https://www.sciencedirect.com/science/article/pii/S0950584922002518},
+  author = {Cláuvin Almeida and Marcos Kalinowski and Anderson Uchôa and Bruno Feijó},
+  keywords = {Gamification, Negative effects, Education, Learning, Systematic mapping, Snowballing, Focus group},
+  abstract = {Context: While most research shows positive effects of gamification, the focus on its adverse effects is considerably smaller and further understanding of these effects is needed. Objective: To provide a comprehensive overview on research reporting negative effects of game design elements and to provide insights into the awareness of developers on these effects and into how they could be considered in practice. Method: We conducted a systematic mapping study of the negative effects of game design elements on education/learning systems. We also held a focus group discussion with developers of a gamified software, discussing the mapping study results with regard to their awareness and perceptions on the reported negative effects in practice. Results: The mapping study revealed 87 papers reporting undesired effects of game design elements. We found that badges, leaderboards, competitions, and points are the game design elements most often reported as causing negative effects. The most cited negative effects were lack of effect, worsened performance, motivational issues, lack of understanding, and irrelevance. The ethical issues of gaming the system and cheating were also often reported. As part of our results, we map the relations between game design elements and the negative effects that they may cause. The focus group revealed that developers were not aware of many of the possible negative effects and that they consider this type of information useful. The discussion revealed their agreement on some of those potential negative effects and also some positive counterparts. Conclusions: Gamification, when properly applied, can have positive effects on education/learning software. However, gamified software is also prone to generate harmful effects. Revealing and discussing potentially negative effects can help to make more informed decisions considering their trade-off with respect to the expected benefits.}
+}
+
 @article{9904005,
   author = {R. de Mello and R. Oliveira and A. Uchôa and W. Oizumi and A. Garcia and B. Fonseca and F. de Mello},
   journal = {IEEE Software},
@@ -20,6 +48,7 @@
   author={Darwin Pinheiro and Carla Bezerra and Anderson Uchôa},
   booktitle={Proceedings of the 16th Brazilian Symposium on Software Components, Architectures, and Reuse (SBCARS), 2022, Uberlandia, Brazil, October 3--4},
   pages={1--10},
+  note={<font color="red"> Best Paper Award </font>},
   year={2022},
   abstract={Refactoring is defined as a transformation that changes the internal structure of the source code without changing the external behavior. Keeping the external behavior means that after applying the refactoring activity, the software must produce the same output as before the activity. The refactoring activity can bring several benefits, such as: removing code with low structural quality, avoiding or reducing technical debt, improving code maintainability, reuse or readability. In this way, the benefits extend to internal and external quality attributes. The literature on software refactoring suggests carrying out studies that invest in improving automated solutions for detecting and correcting refactoring. Furthermore, few studies investigate the influence that a less complex type of refactoring can have on predicting more complex refactorings. This paper investigates how less complex (trivial) refactorings affect the prediction of more complex (non-trivial) refactorings. To do this, we classify refactorings based on their triviality, extract metrics from the code, contextualize the data and train machine learning algorithms to investigate the effect caused. Our results suggest that: (i) machine learning with tree-based models (Random Forest and Decision Tree) performed very well when trained with code metrics to detect refactorings; (ii) separating trivial from non-trivial refactorings into different classes resulted in a more efficient model, indicative of improving the accuracy of automated solutions based on machine learning; and, (iii) using balancing techniques that increase or decrease samples randomly is not the best strategy to improve datasets composed of code metrics.},
   url={https://anderson-uchoa.github.io/publications/pinheiro2022how.pdf}
