--- a/publications/UchoaPapers.bib
+++ b/publications/UchoaPapers.bib
@@ -40,26 +40,28 @@
   journal = {IEEE Software},
   title = {Recommendations for Developers Identifying Code Smells},
   year = {2022},
-  volume = {},
-  number = {01},
+  volume = {40},
+  number = {02},
   issn = {1937-4194},
-  pages = {2-10},
+  pages = {90-98},
   abstract = {Identifying code smells is a widely disseminated practice for preventing software systems from design problems and other maintainability issues. This task remains challenging and manual despite several catalogues and detection tools being available. The complexity involved in identifying a code smell requires the developer’s ability to analyse its surrounding context, reflecting on its actual incidence and need for removal. Despite the predominantly manual nature of the task, there is still quite limited knowledge of the human and social aspects involved. In this sense, we conducted several investigations centred on the community of software developers in recent years. The outcomes of this work provide a comprehensive view of the task and emerging findings, such as the developers’ major beliefs, values, and ideas about identifying code smells. Based on these outcomes, we present practical recommendations to developers to optimise efforts in identifying code smells.},
   keywords = {codes;software;task analysis;software systems;frequency measurement;psychology;complexity theory},
   doi = {10.1109/MS.2022.3203716},
   publisher = {IEEE Computer Society},
   address = {Los Alamitos, CA, USA},
-  month = {sep}
+  month = {mar}
 }
 
 @inproceedings{pinheiro2022how,
   title={How do Trivial Refactorings Affect Classification Prediction Models?},
   author={Darwin Pinheiro and Carla Bezerra and Anderson Uchôa},
   booktitle={Proceedings of the 16th Brazilian Symposium on Software Components, Architectures, and Reuse (SBCARS), 2022, Uberlandia, Brazil, October 3--4},
-  pages={1--10},
+  pages = {81–90},
+  isbn = {9781450397452},
   note={<font color="red"> Best Paper Award </font>},
   year={2022},
   abstract={Refactoring is defined as a transformation that changes the internal structure of the source code without changing the external behavior. Keeping the external behavior means that after applying the refactoring activity, the software must produce the same output as before the activity. The refactoring activity can bring several benefits, such as: removing code with low structural quality, avoiding or reducing technical debt, improving code maintainability, reuse or readability. In this way, the benefits extend to internal and external quality attributes. The literature on software refactoring suggests carrying out studies that invest in improving automated solutions for detecting and correcting refactoring. Furthermore, few studies investigate the influence that a less complex type of refactoring can have on predicting more complex refactorings. This paper investigates how less complex (trivial) refactorings affect the prediction of more complex (non-trivial) refactorings. To do this, we classify refactorings based on their triviality, extract metrics from the code, contextualize the data and train machine learning algorithms to investigate the effect caused. Our results suggest that: (i) machine learning with tree-based models (Random Forest and Decision Tree) performed very well when trained with code metrics to detect refactorings; (ii) separating trivial from non-trivial refactorings into different classes resulted in a more efficient model, indicative of improving the accuracy of automated solutions based on machine learning; and, (iii) using balancing techniques that increase or decrease samples randomly is not the best strategy to improve datasets composed of code metrics.},
+  doi = {10.1145/3559712.3559720},
   url={https://anderson-uchoa.github.io/publications/pinheiro2022how.pdf}
 }
 
@@ -69,6 +71,7 @@
   booktitle={Proceedings of the XVIII Brazilian Symposium on Information Systems (SBSI), 2022, Curitiba, Brazil, May 16--19},
   pages={1--8},
   year={2022},
+  isbn = {9781450396981},
   abstract={Context: The Internet of Things (IoT) is a network of physical objects and system connected through mutual communication protocols. IoT systems have specific characteristics such as, self-configuration, dynamic changes, device and software heterogeneity. Goal: As IoT systems incorporate several components of the software, hardware, communication, and other features, building requirements documents to such systems become a challenge for Requirements Engineering (RE). Thus, this paper presents TEl-IoT, a template to aid developers during the requirements elicitation activities for IoT systems. Method: We conducted three evidence-based studies. We first performed a literature review aiming to identify artifacts that support requirements elicitation and specification for IoT systems. Second, based on the literature review, we proposed the initial version of the TEl-IoT. Finally, we performed two empirical studies to assess the TEl-IoT: (i) feasibility study with industry regarding the first version of TEl-IoT, and (ii) an observational study to understand how students apply the TEl-IoT in an IoT project. Results: Our results showed that TEl-IoT is viable, and its use reduces the time spent on requirements elicitation, in comparison with the ad-hoc way. In addition, our qualitative results also suggested that the use of TEl-IoT facilitates the requirements elicitation for IoT systems. Conclusion: We expect our template to guide requirements elicitation for IoT systems in practice. Our results showed that TEl-IoT can support developers and contribute to the body of knowledge about RE applicable in the IoT context.},
   url={https://anderson-uchoa.github.io/publications/souza2022tel.pdf},
   doi = {10.1145/3535511.3535538}
